chore(docs): update GitHub link in homepage hero actions

--- a/docs/src/app/pages/home/home.html
+++ b/docs/src/app/pages/home/home.html
@@ -5,7 +5,7 @@
     
     <div class="hero-actions">
       <a mat-raised-button color="primary" routerLink="/docs/signal-store-testing/getting-started">Get Started</a>
-      <a mat-stroked-button href="https://github.com/yourusername/ng-spark" target="_blank">
+      <a mat-stroked-button href="https://https://github.com/khvedela/ng-spark" target="_blank">
         <mat-icon>code</mat-icon> GitHub
       </a>
     </div>
